# UniversalOpenCoreManager

./: .gitignore  BLUEPRINT.md  BUILD.md  CHANGELOG.md  CODING_STANDARDS.md  LICENSE  Makefile  README.md  UOCM.spec  VALIDATION_FEATURES.md  app.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
assets/: .gitkeep  ICON_INSTRUCTIONS.md  README.md
plugins/example_plugin/: __init__.py  manifest.json
scripts/: build_mac.sh  build_mac_pyinstaller.sh  build_windows.bat  create_ico.py  create_icons.sh  setup.bat  setup.sh  sign_and_notarize.sh  test_build.bat  test_build.sh
templates/: config_base.plist
tests/: __init__.py  conftest.py  test_detector.py  test_plist_editor.py  test_smoke.py  test_validator.py
translations/: en_US.json  pt_BR.json
universal_oc_manager/core/detector/: detect.py
universal_oc_manager/core/engine/: generator.py
universal_oc_manager/core/plist/: loader.py
universal_oc_manager/core/validator/: schema_validator.py
universal_oc_manager/infra/db/: models.py  session.py
universal_oc_manager/infra/http/: github_client.py
universal_oc_manager/infra/logging/: logger.py
universal_oc_manager/infra/schemas/: opencore_schema.json  schema_manager.py
universal_oc_manager/infra/settings/: config.py
universal_oc_manager/infra/templates/: config_default.plist
universal_oc_manager/ui/: backend.py
universal_oc_manager/ui/i18n/: en.json  pt-BR.json
universal_oc_manager/ui/qml/: Main.qml  (+1 more)
uocm/: __init__.py  main.py
uocm/acpi_manager/: __init__.py  manager.py
uocm/core/: __init__.py  app.py  config.py  i18n.py  platform.py
uocm/db/: __init__.py  database.py  init_data.py  models.py
uocm/debugger/: __init__.py  debugger.py
uocm/detector/: __init__.py  hardware_detector.py  models.py
uocm/engine_generator/: __init__.py  efi_generator.py  modes.py
uocm/kext_manager/: __init__.py  github_client.py  manager.py
uocm/plist_editor/: __init__.py  editor.py  oc_snapshot.py  validator.py
uocm/plugins/: __init__.py  base.py  manager.py
uocm/ui/: __init__.py  detector_widget.py  editor_widget.py  generator_widget.py  kext_manager_widget.py  main_window.py
